--- a/ToffoliGateExploration_qiskit_2_0_0.ipynb
+++ b/ToffoliGateExploration_qiskit_2_0_0.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "Whether such implementation is optimal needs further investigation.\n",
     "\n",
-    "This notebook proves that the implementation can be executed on a real IBM quantum computer (ibm_torino).\n",
+    "This notebook proves the implementation can be executed on a real IBM quantum computer (ibm_torino).\n",
     "\n",
     "Reference [2] provides a Toffoli gate overview.\n",
     "\n",
